--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,4 +1,4 @@
 @import url(Reset.css);
 @import url(color.css);
 @import url(fonts.css);
-
+@import url(/assets/pages/login/partials/section-1.css);
