--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,4 +1,8 @@
 @import url(Reset.css);
 @import url(color.css);
 @import url(fonts.css);
-@import url(/assets/pages/login/partials/section-1.css);
+@import url(/assets/pages/dashboard/dashboard.css);
+@import url(/assets/pages/login/login.css);
+@import url(/assets/pages/criador/criador.css);
+@import url(/assets/pages/conzientizese/conzientizese.css);
+@import url(simpleThings.css);
