--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,7 @@
 @import url(Reset.css);
 @import url(color.css);
 @import url(fonts.css);
-@import url(/assets/pages/dashboard/dashboard.css);
+@import url(/assets/pages/home/home.css);
 @import url(/assets/pages/login/login.css);
 @import url(/assets/pages/criador/criador.css);
 @import url(/assets/pages/conzientizese/conzientizese.css);
