--- a/assets/pages/criador/partials/criador.css
+++ b/assets/pages/criador/partials/criador.css
@@ -1,15 +1,19 @@
 .container-creator {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    margin-top: 50px;
   }
 
   .nome-criador {
-    display: block;
-    margin: 10px 0;
     font-size: 40px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bolder;
+  }
+
+  .icons-creator{
+    display: flex;
+    justify-content: space-between;
   }
