--- a/assets/pages/escravizador/escravizadores.css
+++ b/assets/pages/escravizador/escravizadores.css
@@ -51,6 +51,8 @@ DOCTYPE html>
                 
                 <!-- Seção de conteúdo central, com a tabela dos escravziadores, atualziada até outubro de 2024 -->
                 <div class="tabela">
+                    <a href="cescravizadores.html" 
+
                 </div>
                 
             </div>
